Prevent horizontal scroll on mobile

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -24,6 +24,11 @@
     }
 }
 
+html,
+body {
+    overflow-x: hidden;
+}
+
 #graph-layout,
 #outline-layout {
     transition:
